fix broken layout with no price explanation

--- a/app/assets/stylesheets/custom/participation.scss
+++ b/app/assets/stylesheets/custom/participation.scss
@@ -13,4 +13,7 @@
   text-align: left;
   margin-bottom: 20px;
 }
+.no-overflow {
+  overflow: hidden;
+}
 // End added by DJND/muki
